Remove animation on header/footer links

--- a/src/css/tailwind.css
+++ b/src/css/tailwind.css
@@ -27,7 +27,7 @@
     }
 
     .static-li-link:hover {
-        @apply text-tokyonight-highlight animate__animated animate__heartBeat animate__slower;
+        @apply text-tokyonight-highlight;
     }
 
     /* -[ Section ]- */
